Thu 22 Sep 2022 Aleksey Kravchenko
	* Support escaping of special characters in file paths

Wed 14 Sep 2022 Aleksey Kravchenko
	* New printf-format directive '%d' to print file directory

Wed 10 Aug 2022 Aleksey Kravchenko
	* New option --unverified to print unverified files

Mon 01 Aug 2022 Aleksey Kravchenko
	* New option --missing to print missing files

Tue 14 Jun 2022 Aleksey Kravchenko
	* === Version 1.4.3 ===

Tue 14 Jun 2022 Michael Hudson-Doyle
	* Support runtime loading of OpenSSL 3.0

Sun 12 Jun 2022 Aleksey Kravchenko
	* Bugfix: Show total speed in the update mode

Sat 19 Feb 2022 Aleksey Kravchenko
	* LibRHash: add rhash_import() and rhash_export() functions

Mon 03 Jan 2022 Aleksey Kravchenko
	* Bugfix: fix building of the LibRHash static library on Solaris
	* Honor hash file extension in --update mode

Sun 19 Dec 2021 Aleksey Kravchenko
	* Support --ignore-missing option, to ignore missing files in --check mode

Sun 12 Dec 2021 Aleksey Kravchenko
	* Support --brief option to show verification report without header and footer
	* Bugfix: hash options were sometimes ignored in the --check mode
	* Allow simultaneous usage of --update and --check options

Fri 05 Nov 2021 Aleksey Kravchenko
	* Honor --lowercase option while --embed-crc is in action

Mon 01 Nov 2021 And Sch
	* Improve ripemd160 performance

Mon 01 Nov 2021 Aleksey Kravchenko
	* Add --bt-transmission option to create Transmission compatible torrent files

Sun 26 Sep 2021 Aleksey Kravchenko
	* Bugfix: star character at the start of filepath must be ignored

Wed 14 Jul 2021 Aleksey
	* === Version 1.4.2 ===
	* print 'Nothing to verify' when verifying a hash file without a message digest

Wed 14 Jul 2021 Zak Kemble
	* significantly improve file reading performance on Linux/Unix

Sun 11 Jul 2021 Aleksey
	* Bugfix: fix verification of some hash files containing spaces in file paths
	* count unparsed lines of a hash file as errors
	* print line numbers of unparsed lines of a hash file
