@@ -166,9 +166,9 @@ Set a comma\(hydelimited list of extensions of the files to process.
 Set a comma\(hydelimited list of extensions of the files to exclude from processing.
 .IP "\-t, \-\-crc\-accept=<list>"
 Set a comma\(hydelimited list of extensions of the hash files to verify.
-.IP "\-\-maxdepth=<levels>"
+.IP "\-\-max\-depth=<levels>"
 Descend at most <levels> (a non\(hynegative integer) levels of directories below
-the command line arguments. `\-\-maxdepth 0' means only apply the tests and
+the command line arguments. `\-\-max\-depth 0' means only apply the tests and
 actions to the command line arguments.
 .IP "\-o, \-\-output=<file\-path>"
 Set the file to output calculated message digests or verification results to.
