@@ -1,5 +1,8 @@
+Tue 27 Sep 2022 Aleksey Kravchenko
+	* Renamed --maxdepth option to --max-depth
+
 Thu 22 Sep 2022 Aleksey Kravchenko
-	* Support escaping of special characters in file paths
+	* Supported escaping of special characters in file paths
 
 Wed 14 Sep 2022 Aleksey Kravchenko
 	* New printf-format directive '%d' to print file directory
